Ajuste nas permissões das requisições